[gd_scene load_steps=24 format=3 uid="uid://cgo0bywveiaoe"]

[ext_resource type="Script" path="res://Scenes/GameScene/GameScene.gd" id="1_s0sno"]
[ext_resource type="PackedScene" uid="uid://cl3go1fjrt422" path="res://Scenes/Maps/Map1.tscn" id="2_3geho"]
[ext_resource type="Texture2D" uid="uid://c7oaee1122bfo" path="res://Assets/UI/Buttons/blue_button12.png" id="3_20aqr"]
[ext_resource type="Texture2D" uid="uid://csdxnbnpjwviq" path="res://Assets/Towers/red-shroom-single.png" id="4_5py6r"]
[ext_resource type="Texture2D" uid="uid://d0tr2jfnybkml" path="res://Assets/Towers/frost-shroom-single.png" id="5_3sqt7"]
[ext_resource type="Texture2D" uid="uid://dw0nc28itbhq7" path="res://Assets/UI/Buttons/red_button09.png" id="6_i5tm5"]
[ext_resource type="Texture2D" uid="uid://d18lp21gvntwj" path="res://Assets/Icons/trashcanOpen.png" id="7_2sbkl"]
[ext_resource type="FontFile" uid="uid://bpln322746wyd" path="res://Assets/Fonts/Kenney Blocks.ttf" id="8_n5nc6"]
[ext_resource type="Texture2D" uid="uid://dedap7vhyvvor" path="res://Assets/Icons/pause.png" id="9_uymcs"]
[ext_resource type="Texture2D" uid="uid://s1lkb4o7y2g" path="res://Assets/Icons/right.png" id="10_xfmqq"]
[ext_resource type="Texture2D" uid="uid://bkmqlmy7ocfh7" path="res://Assets/UI/Buttons/blue_button03.png" id="11_fa7g5"]
[ext_resource type="Texture2D" uid="uid://27xcdwpqbajs" path="res://Assets/UI/Buttons/blue_button05.png" id="12_3helg"]
[ext_resource type="Texture2D" uid="uid://dfinilvc4arx7" path="res://Assets/UI/Buttons/red_button02.png" id="13_66ylo"]
[ext_resource type="Texture2D" uid="uid://d2gkuptoivqlm" path="res://Assets/UI/Buttons/red_button00.png" id="14_43fur"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4kyaw"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("8_n5nc6"), ExtResource("8_n5nc6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_1eqnh"]
default_font = SubResource("1")

[sub_resource type="LabelSettings" id="LabelSettings_cld70"]
font = ExtResource("8_n5nc6")

[sub_resource type="LabelSettings" id="LabelSettings_uqx70"]
line_spacing = 0.0
font_color = Color(1, 0.843137, 0, 1)

[sub_resource type="FontFile" id="FontFile_7qaux"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("8_n5nc6"), ExtResource("8_n5nc6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="Theme_dmbqd"]
default_font = SubResource("FontFile_7qaux")

[sub_resource type="LabelSettings" id="LabelSettings_ohfbf"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_mk2vw"]
font_size = 24

[node name="GameScene" type="Node2D"]
script = ExtResource("1_s0sno")

[node name="Map" parent="." instance=ExtResource("2_3geho")]
position = Vector2(16, 16)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BottomBar" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="Control1" type="Control" parent="UI/MarginContainer/BottomBar"]
process_mode = 4
layout_mode = 2

[node name="BuildBar" type="HBoxContainer" parent="UI/MarginContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="General" type="TextureButton" parent="UI/MarginContainer/BottomBar/BuildBar" groups=["build_buttons"]]
material = SubResource("CanvasItemMaterial_4kyaw")
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_20aqr")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/MarginContainer/BottomBar/BuildBar/General"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_5py6r")
expand_mode = 1
flip_h = true

[node name="Frost" type="TextureButton" parent="UI/MarginContainer/BottomBar/BuildBar" groups=["build_buttons"]]
material = SubResource("CanvasItemMaterial_4kyaw")
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_20aqr")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/MarginContainer/BottomBar/BuildBar/Frost"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 6.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3sqt7")
expand_mode = 1

[node name="Chanterelle" type="TextureButton" parent="UI/MarginContainer/BottomBar/BuildBar" groups=["build_buttons"]]
material = SubResource("CanvasItemMaterial_4kyaw")
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("3_20aqr")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/MarginContainer/BottomBar/BuildBar/Chanterelle"]
modulate = Color(1, 0.647059, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 6.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3sqt7")
expand_mode = 1

[node name="Trash" type="TextureButton" parent="UI/MarginContainer/BottomBar" groups=["build_buttons"]]
material = SubResource("CanvasItemMaterial_4kyaw")
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_i5tm5")
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="UI/MarginContainer/BottomBar/Trash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_2sbkl")
expand_mode = 1

[node name="Control2" type="Control" parent="UI/MarginContainer/BottomBar"]
process_mode = 4
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Waves" type="HBoxContainer" parent="UI/MarginContainer/BottomBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/MarginContainer/BottomBar/VBoxContainer/Waves"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
theme = SubResource("Theme_1eqnh")
text = "Waves"
label_settings = SubResource("LabelSettings_cld70")
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/MarginContainer/BottomBar/VBoxContainer/Waves"]
modulate = Color(0.666667, 1, 0.666667, 1)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0

[node name="HP" type="HBoxContainer" parent="UI/MarginContainer/BottomBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/MarginContainer/BottomBar/VBoxContainer/HP"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
theme = SubResource("Theme_1eqnh")
text = "HP"
label_settings = SubResource("LabelSettings_cld70")
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="UI/MarginContainer/BottomBar/VBoxContainer/HP"]
modulate = Color(1, 0.666667, 0.666667, 1)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 50.0

[node name="Wallet" type="HBoxContainer" parent="UI/MarginContainer/BottomBar/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/MarginContainer/BottomBar/VBoxContainer/Wallet"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
theme = SubResource("Theme_1eqnh")
text = "Wallet"
label_settings = SubResource("LabelSettings_cld70")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="UI/MarginContainer/BottomBar/VBoxContainer/Wallet"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "150"
label_settings = SubResource("LabelSettings_uqx70")
horizontal_alignment = 1

[node name="Control3" type="Control" parent="UI/MarginContainer/BottomBar"]
process_mode = 4
layout_mode = 2

[node name="PlayPause" type="TextureButton" parent="UI/MarginContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource("9_uymcs")
texture_pressed = ExtResource("10_xfmqq")

[node name="PauseScreen" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 0.431373)

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="TextureButton" parent="PauseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("11_fa7g5")
texture_pressed = ExtResource("12_3helg")
stretch_mode = 0

[node name="Label" type="Label" parent="PauseScreen/HBoxContainer/VBoxContainer/Continue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.5
offset_right = 30.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dmbqd")
text = "Continue"

[node name="Restart" type="TextureButton" parent="PauseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_3helg")
texture_pressed = ExtResource("11_fa7g5")
stretch_mode = 0

[node name="Label" type="Label" parent="PauseScreen/HBoxContainer/VBoxContainer/Restart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Restart"

[node name="Control" type="Control" parent="PauseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Quit" type="TextureButton" parent="PauseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("13_66ylo")
texture_pressed = ExtResource("14_43fur")
stretch_mode = 0

[node name="Label" type="Label" parent="PauseScreen/HBoxContainer/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Quit Level"

[node name="LooseScreen" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="LooseScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 0.431373)

[node name="HBoxContainer" type="HBoxContainer" parent="LooseScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LooseScreen/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="LooseScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1eqnh")
text = "You lose("
label_settings = SubResource("LabelSettings_ohfbf")
horizontal_alignment = 1

[node name="Control" type="Control" parent="LooseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="TryAgain" type="TextureButton" parent="LooseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_3helg")
texture_pressed = ExtResource("11_fa7g5")
stretch_mode = 0

[node name="Label" type="Label" parent="LooseScreen/HBoxContainer/VBoxContainer/TryAgain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.0
offset_right = 50.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Try Again"

[node name="Control2" type="Control" parent="LooseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Quit" type="TextureButton" parent="LooseScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_66ylo")
texture_pressed = ExtResource("14_43fur")
stretch_mode = 0

[node name="Label" type="Label" parent="LooseScreen/HBoxContainer/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Quit Level"

[node name="WinScreen" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="WinScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0352941, 0.0352941, 0.0352941, 0.431373)

[node name="HBoxContainer" type="HBoxContainer" parent="WinScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1eqnh")
text = "You won!"
label_settings = SubResource("LabelSettings_mk2vw")
horizontal_alignment = 1

[node name="Control" type="Control" parent="WinScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Next" type="TextureButton" parent="WinScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_3helg")
texture_pressed = ExtResource("11_fa7g5")
stretch_mode = 0

[node name="Label" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer/Next"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Go Next"

[node name="Control2" type="Control" parent="WinScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Quit" type="TextureButton" parent="WinScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("13_66ylo")
texture_pressed = ExtResource("14_43fur")
stretch_mode = 0

[node name="Label" type="Label" parent="WinScreen/HBoxContainer/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -13.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1eqnh")
text = "Quit Level"

[connection signal="pressed" from="UI/MarginContainer/BottomBar/Trash" to="." method="_on_trash_pressed"]
[connection signal="pressed" from="UI/MarginContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="LooseScreen/HBoxContainer/VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="LooseScreen/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="WinScreen/HBoxContainer/VBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="WinScreen/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
